# fafu_auto_sign

./: .gitignore  AGENTS.md  LICENSE.md  README.md  config.json.example  fafu_auto_sign.py  pyproject.toml  requirements.txt
src/fafu_auto_sign/: AGENTS.md  __init__.py  __main__.py  client.py  config.py  crypto.py  graceful_shutdown.py  logging_config.py  main.py
src/fafu_auto_sign/services/: __init__.py  notification_service.py  sign_service.py  task_service.py  upload_service.py
tests/: AGENTS.md  conftest.py  test_client.py  test_config.py  test_crypto.py  test_crypto_characterization.py  test_graceful_shutdown.py  test_integration.py  test_logging.py  test_notification_service.py  test_sign_service.py  test_task_characterization.py  test_task_service.py  test_upload_service.py  test_upload_service_random.py
