[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fafu-auto-sign"
version = "0.1.0"
description = "福建农林大学数字FAFU自动签到助手"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FAFU Auto Sign Contributors"},
]
keywords = ["fafu", "auto-sign", "签到", "福建农林大学"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "serverchan-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "freezegun>=1.0.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
fafu-auto-sign = "fafu_auto_sign.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/fafu_auto_sign"
Repository = "https://github.com/yourusername/fafu_auto_sign"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=fafu_auto_sign --cov-report=term-missing"
pythonpath = ["src"]
